[ADD] player audio [FIX] player ignores own collider when raycasting [FIX] player is disabeld when teleporting [FIX] spline revealer now uses a shader instead of changing the mesh which was flickering in the launcher because it was getting rebuilt every frame [ADD] disolve capability to camera to make occluders use the the dissolvepercentage.  not actually being used.

--- a/Levels/player/level.cfg
+++ b/Levels/player/level.cfg
@@ -1,4 +1,11 @@
-r_displayinfo=3
+r_displayinfo=0
 r_vsync=0
-r_sysmaxfps=90
+sys_maxfps=90
 r_furmaxviewdist=100
+r_AntialiasingMode=2
+e_volumetricfog=1
+e_terrain=0
+r_motionblur=0
+r_width=1920
+r_height=1280
+r_fullscreen=1
